[mac] 1x emulation on Retina hardware shouldn't use SPI https://bugs.webkit.org/show_bug.cgi?id=122152 <rdar://problem/15119384>

Reviewed by Anders Carlsson.

* DumpRenderTree/mac/DumpRenderTree.mm:
(createWebViewAndOffscreenWindow):
(main):
* DumpRenderTree/mac/DumpRenderTreeWindow.h:
* DumpRenderTree/mac/DumpRenderTreeWindow.mm:
* WebKitTestRunner/mac/PlatformWebViewMac.mm:
(WTR::PlatformWebView::PlatformWebView):
* WebKitTestRunner/mac/main.mm:
(main):
Register for AppleMagnifiedMode instead of using _setWindowResolution:displayIfChanged:.


Canonical link: https://commits.webkit.org/140217@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@156724 268f45cc-cd09-0410-ab3c-d52691b4dbfc